tests/negative/typecheck/try.orng
fn main() -> Int
    try 0
    0